# diet_manager_cli

./: CMakeLists.txt  README.md
include/database/: database.h
include/food/: basic_food.h  composite_food.h  food.h
include/logger/: logger.h
include/user/: user.h
include/utils/: utils.h
src/: main.cpp
src/database/: database.cpp
src/food/: basic_food.cpp  composite_food.cpp  food.cpp
src/logger/: logger.cpp
src/user/: user.cpp
src/utils/: utils.cpp
